--- a/sheets/spellbook.tex
+++ b/sheets/spellbook.tex
@@ -20,43 +20,45 @@ Zippie `Well-done' Nimbledigit
 
 \section*{\aunclfamily{Level 0}}
 \normalfont
-\begin{tabular}{|l|l|l|}
+\begin{tabular}{|l|l|l|l|}
 \hline
-\hspace{0.5em} & Acid Splash & 1d3 acid dmg, ranged touch \\
+\hspace{0.5em} & \hspace{0.5em} & Acid Splash & 1d3 acid dmg, ranged touch \\
 \hline
-& Detect Poison & Detect poison in one creature or small object \\
+& & Detect Poison & Detect poison in one creature or small object \\
 \hline
-& Detect magic &  Detects spells and magic items within 60 ft. \\
+& & Detect magic &  Detects spells and magic items within 60 ft. \\
 \hline
-& Read magic & Read scrolls and spellbooks. \\
+& & Read magic & Read scrolls and spellbooks. \\
 \hline
-& Daze & Humanoid creature of 4 HD or less loses next action. \\
+& & Daze & Humanoid creature of 4 HD or less loses next action. \\
 \hline
-&Dancing Lights& Creates torches or other lights.\\
+& & Dancing Lights& Creates torches or other lights.\\
 \hline
-&Flare& Dazzles one creature (-1 on attack rolls).\\
+& & Flare& Dazzles one creature (-1 on attack rolls).\\
 \hline
-&Light& Object shines like a torch.\\
+& & Light& Object shines like a torch.\\
 \hline
-&Ray of Frost& Ray deals 1d3 cold damage.\\
+& &Ray of Frost& Ray deals 1d3 cold damage.\\
 \hline
-&Ghost Sound& Figment sounds.\\
+& &Ghost Sound& Figment sounds.\\
 \hline
-&Disrupt Undead& Deals 1d6 damage to one undead. \\
+& &Disrupt Undead& Deals 1d6 damage to one undead. \\
 \hline
-&Touch of Fatigue& Touch attack fatigues target.\\
+& &Touch of Fatigue& Touch attack fatigues target.\\
 \hline
-&Mage Hand& 5-pound telekinesis.\\
+& &Mage Hand& 5-pound telekinesis.\\
 \hline
-&Mending& Makes minor repairs on an object.\\
+& &Mending& Makes minor repairs on an object.\\
 \hline
-&Message& Whispered conversation at distance.\\
+& &Message& Whispered conversation at distance.\\
 \hline
-&Open/Close& Opens or closes small or light things.\\
+& &Open/Close& Opens or closes small or light things.\\
 \hline
-& Arcane Mark & Inscribes a personal rune (visible or invisible). \\
+& & Arcane Mark & Inscribes a personal rune (visible or invisible). \\
 \hline
-&Prestidigitation & Performs minor tricks.\\
+& &Prestidigitation & Performs minor tricks.\\
 \hline
 \end{tabular}
+
+
 \end{document}
