Dndwildshape is now a subcommand of dndmake:
dndmake npc         (formerly dndmake)
dndmake wildshape   (formerly dndwildshape)
dndmake init        (initialise directory, not implemented yet)

--- a/extras/dndmake-wildshape.1
+++ b/extras/dndmake-wildshape.1
@@ -1,9 +1,9 @@
-.TH "DNDWILDSHAPE" "1" "March 2016" "dndwildshape 0.1" "User Commands"
+.TH "DNDMAKE-WILDSHAPE" "1" "March 2016" "dndmake 0.1" "User Commands"
 .SH NAME
-dndwilshape \- Scrapes an online character sheet and applies all animal
+dndmake wildshape \- Scrapes an online character sheet and applies all animal
 templates for wildshape stats.
 .SH SYNOPSIS
-.B dndmake
+.B dndmake [wildshape|wi]
 [\fB\-h\fR]
 [\fB\-l\fR]
 [\fB\-v\fR]
