Added documentation about adding races.

--- a/extras/dndmake-npc.1
+++ b/extras/dndmake-npc.1
@@ -45,34 +45,39 @@ experience unpleasant emotions easily, such as anger, anxiety, depression, and
 vulnerability. Neuroticism also refers to the degree of emotional stability and
 impulse control and is sometimes referred to by its low pole, "emotional
 stability".
+
+.SS Adding/Changing Races
+New races can be added in ~/.config/dndmake/races/. Examples can be found in
+/etc/dndmake/races/.
+
 .SH OPTIONS
 .TP
 {halfling,gnome,half\-orc,elf,dwarf,human,half\-elf,...}
-Race
+race
 .TP
 .BR \-a ", " \-\-alignment ={NN,LG,CE,CG,NE,CN,LN,LE,NG}
-Alignment
+alignment
 .TP
 .BR \-h ", " \-\-help
 show this help message and exit
 .TP
 .BR \-m ", " \-\-male
-Make a male character
+make a male character
 .TP
 .BR \-f ", " \-\-female
-Make a female character
+make a female character
 .TP
 .BR \-t ", " \-\-tall
-Make a tall character
+make a tall character
 .TP
 .BR \-s ", " \-\-short
-Make a short character
+make a short character
 .TP
 .BR \-b ", " \-\-heavy
-Make a heavy character
+make a heavy character
 .TP
 .BR \-l ", " \-\-light
-Make a light character
+make a light character
 .TP
 .BR \-n ", " \-\-name =\fINAME\fR
-Character name
+character name
