--- a/extras/dndmake.1
+++ b/extras/dndmake.1
@@ -13,6 +13,7 @@ Dndmake is a tool for managing D&D 3.5 campaigns.
 It can generate NPCs, wildshapes, or help organise a campaign.
 
 .SH OPTIONS
+.TP
 .BR \-h ", " \-\-help
 show this help message and exit
 .TP
@@ -24,15 +25,13 @@ print version and exit
 {init,npc,wildshape}
 .TP
 .BR dndmake-init "(1)"
-Create a D&D campaign in the current directory.
+create a D&D campaign in the current directory.
 .TP
 .BR dndmake-npc "(1)"
-Generate a D&D character with a gender and a height and weight based on the
-gender. Furthermore they have a hair and eye colour and a personality based on
-the five-factor model (FFM), which influences their alignment. Gender, height,
-weight and alignment can also be influenced or forced through arguments.
+generate a D&D character with a gender and a height and weight appearance and
+personality
 .TP
 .BR dndmake-wildshape "(1)"
-Scrape an online character sheet and apply all animal templates for wildshape
-stats.
+scrape an online character sheet and apply all animal templates for wildshape
+stats
 .TP
